# CUDA

./: README.md
gauss_filter/c++_pipeline/: CMakeLists.txt
gauss_filter/c++_pipeline/inc/: posix.hpp  vision.hpp
gauss_filter/c++_pipeline/src/: posix.cpp  vision.cpp
gauss_filter/c++_pipeline/test/: main.cpp
sobel_filter/c++_pipeline/src/: vision.cpp
sobel_filter/python_pipeline/: hud.py
